--- a/exercises/practice/robot-name/.meta/config.json
+++ b/exercises/practice/robot-name/.meta/config.json
@@ -1,6 +1,20 @@
 {
   "blurb": "Manage robot factory settings.",
   "authors": [],
+  "contributors": [
+    "arueckauer",
+    "DerTee",
+    "dkinzer",
+    "Dog",
+    "Hrumpa",
+    "kunicmarko20",
+    "kytrinyx",
+    "lafent",
+    "masters3d",
+    "neenjaw",
+    "petemcfarlane",
+    "schorsch3000"
+  ],
   "files": {
     "solution": [
       "RobotName.php"
