--- a/exercises/practice/two-fer/.meta/config.json
+++ b/exercises/practice/two-fer/.meta/config.json
@@ -1,6 +1,12 @@
 {
   "blurb": "Create a sentence of the form \"One for X, one for me.\"",
-  "authors": [],
+  "authors": [
+    "rossbearman"
+  ],
+  "contributors": [
+    "arueckauer",
+    "neenjaw"
+  ],
   "files": {
     "solution": [
       "TwoFer.php"
